# scmus

./: .gitignore  Makefile  Makefile.in  README.md  base.scm  bindings-view.scm  browser-view.scm  check.scm  client.scm  command-line.scm  command-mode.scm  command.scm  commands.scm  config.mk  config.scm  configure  configure.ac  editable.scm  error.scm  eval-mode.scm  eval.scm  event.scm  format.scm  getopt.scm  input.scm  iter.scm  key-table.scm  keys.scm  lib.scm  libmpdclient.h  libmpdclient.scm  library-view.scm  library.scm  log-view.scm  log.scm  main.scm  mpd-client.scm  ncurses.scm  normal-mode.scm  option.scm  (+24 more)
data/: scmusrc.scm
data/colors/: cyan.scm  default.scm  gray-88.scm  green-mono-88.scm  green.scm  gruvbox-light.scm  gruvbox.scm  night.scm  solarized.scm  xterm-white.scm  zenburn.scm
doc/: scmus.1  scmus.1.ronn
docs/: scmus.3  scmus.3.html  scmus.3.ronn
docs/man/: scmus-tutorial.7  scmus-tutorial.7.html  scmus-tutorial.7.ronn  scmus.1  scmus.1.html  scmus.1.ronn  scmus.3  scmus.3.html  scmus.3.ronn
scripts/: install
src/: base.scm  bindings-view.scm  browser-view.scm  client.scm  command-line.scm  command.scm  commands.scm  config.scm  error.scm  event.scm  format.scm  getopt.scm  iter.scm  keys.scm  library-view.scm  log-view.scm  log.scm  main.scm  mpd-client.scm  ncurses.scm  option.scm  options-view.scm  options.scm  playlist-view.scm  prologue.scm  queue-view.scm  search-view.scm  status.scm  track.scm  trie.scm  tui.scm  ueval.scm  ui-curses.scm  user-api.scm  ustring.scm  view.scm  widgets.scm
src/tui/: display.scm  frame.scm  input.scm  list-box.scm  misc.scm  split-pane.scm  widget.scm
test/: event.scm  iter.scm  option.scm  test.scm  trie.scm  ueval-load.scm  ueval.scm
tui/: display.scm  frame.scm  input.scm  list-box.scm  misc.scm  split-pane.scm  widget.scm  window.scm
